--- a/styles/theme.css
+++ b/styles/theme.css
@@ -25,7 +25,7 @@ footer, .push {
 header {
   height: 100%;
   background-size: cover;
-  background-image: url("../images/background.jpg");
+  background-image: url("../images/background.JPG");
   background-repeat: no-repeat;
   background-position: bottom;
   background-attachment: fixed;
