--- a/styles/theme.css
+++ b/styles/theme.css
@@ -33,7 +33,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-image: url("../images/background.JPG");
+  background-image: url("../images/background.jpg");
 }
 
 header a {
